--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-countdown-now": "^2.1.1",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-iframe": "^1.8.0",
     "react-slideshow-image": "^1.2.0"
   },
   "devDependencies": {
